@@ -3,6 +3,9 @@
 #
 
 
+2021-06-21 -> ## readout_db stuff
+              add rest code to readout the database
+
 2021-06-18 -> ## code stuff
               remove wrong NEWLINE to all perror calls in all files
 
